streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
spec:
  replicas: 5  # Adjust as needed
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
        - name: streamlit-container-1
          image: grainger_recommendations_chatbot:tag
          ports:
            - containerPort: 8505
        - name: streamlit-container-2
          image: your-docker-image:tag
          ports:
            - containerPort: 8506
        - name: streamlit-container-3
          image: your-docker-image:tag
          ports:
            - containerPort: 8507
        - name: streamlit-container-4
          image: your-docker-image:tag
          ports:
            - containerPort: 8508
        - name: streamlit-container-5
          image: your-docker-image:tag
          ports:
            - containerPort: 8509
