streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  type: NodePort
  selector:
    app: streamlit  # Label selector matching application pods
  ports:
    - protocol: TCP
      port: 30505  # ANY available port (I.E.: 30505)
      targetPort: 8505  # Port on which application is listening inside the container
